修正包名路径
Signed-off-by: JinhaoLi <q1521983309@163.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ def releaseTime() {
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "passmanage.android.com"
+        applicationId "com.android.passmanager"
         minSdkVersion 18
         targetSdkVersion 28
         versionCode 10
